fixed up a proper parser